--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -13,7 +13,8 @@
   <body>
     <h1>adonis</h1>
     <div class=container>
- <h1>welcome</h1>
+  @section('content')
+  @endsection
     </div>
 
     <!-- Optional JavaScript -->
@@ -23,4 +24,3 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
-
