--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -11,7 +11,10 @@
     <title>adonis</title>
   </head>
   <body>
-    <h1>adonis</h1>
+    <h1>HELLO</h1>
+     <button type="button" class="btn btn-light"><a href="{{ route('home') }}">home</a></button>
+
+
     <div class=container>
   @section('content')
   @endsection
