--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -11,9 +11,15 @@
     <title>adonis</title>
   </head>
   <body>
-    <h1>adonis</h1>
+    <h1>admin</h1>
+    <button type="button" class="btn btn-light"><a href="{{ route('flavours.show') }}">Flavours</a></button>
+    <button type="button" class="btn btn-light"><a href="{{ route('toppings.show') }}">Toppings</a></button>
+    <button type="button" class="btn btn-light"><a href="{{ route('product.show') }}">product</a></button>
+    <button type="button" class="btn btn-light"><a href="{{ route('createCart') }}">create</a></button>
+    <button type="button" class="btn btn-light"><a href="{{ route('customers.show') }}">Customers</a></button>
+    <button type="button" class="btn btn-light"><a href="{{ route('userLogin') }}">User Login</a></button>
     <div class=container>
- <h1>welcome</h1>
+
     </div>
 
     <!-- Optional JavaScript -->
