--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -11,7 +11,7 @@
     <title>adonis</title>
   </head>
   <body>
-    <h1>HELLO</h1>
+    <h1>BASE</h1>
      <button type="button" class="btn btn-light"><a href="{{ route('home') }}">home</a></button>
 
 
