--- a/resources/views/customers/create.edge
+++ b/resources/views/customers/create.edge
@@ -8,21 +8,21 @@
 {{ csrfField() }}
 <div>
 <label>Please register a username</label>
-<input type='text' name='username'/>
+<input class="form-control" type='text' name='username'/>
 </div>
 <div>
 <label>Please enter a password</label>
-<input type='password' name='password' placeholder="less than 8 characters"/>
+<input class="form-control" type='password' name='password' placeholder="less than 8 characters"/>
 </div>
 <div>
 <label>address</label>
-<input type='text'name='address'/>
+<input class="form-control" type='text'name='address'/>
 </div>
 <div>
 <label>email</label>
-<input type='text' name='email'/>
+<input class="form-control" type='text' name='email'/>
 </div>
-<input type='submit'/>
+<input class="form-control" type='submit'/>
 </form>
 
 
