--- a/resources/views/customers/update.edge
+++ b/resources/views/customers/update.edge
@@ -8,19 +8,19 @@
 {{ csrfField() }}
 <div>
 <label>Please register a username</label>
-<input type='text' name='username'value='{{username.username}}'/>
+<input class="form-control" type='text' name='username'value='{{username.username}}'/>
 </div>
 <div>
 <label>Please enter a password</label>
-<input type='password' name='password' value='{{username.password}}'/>
+<input class="form-control" type='password' name='password' value='{{username.password}}'/>
 </div>
 <div>
 <label>address</label>
-<input type='text'name='address' value='{{username.address}}'/>
+<input class="form-control" type='text'name='address' value='{{username.address}}'/>
 </div>
 <div>
 <label>email</label>
-<input type='text' name='email' value='{{username.email}}'/>
+<input class="form-control" type='text' name='email' value='{{username.email}}'/>
 </div>
 <input type='submit'/>
 </form>
