--- a/resources/views/flavour/create.edge
+++ b/resources/views/flavour/create.edge
@@ -8,11 +8,11 @@
 {{ csrfField() }}
 <div>
 <label>flavour</label>
-<input type='text' name='tea'/>
+<input class="form-control" type='text' name='tea'/>
 </div>
 <div>
 <label>Please enter a price</label>
-<input type='text' name='price'/>
+<input class="form-control" type='text' name='price'/>
 </div>
 <input type='submit'/>
 </form>
