--- a/resources/views/product/show.edge
+++ b/resources/views/product/show.edge
@@ -2,9 +2,9 @@
 @section('content')
 
 <h1>Product selected</h1>
-<div class="container">
+
 <form method="POST">
-<table clsss="table">
+<table class="table">
 <tr>
 <th>product id</th>
 <th>flavour</th>
@@ -27,6 +27,5 @@
 </table>
 <input type="submit" class="btn btn-success" value="add to cart"/>
 
-</div>
 
 @endsection
