--- a/resources/views/customers/login.edge
+++ b/resources/views/customers/login.edge
@@ -5,11 +5,11 @@
   {{csrfField()}}
   <div>
     <label>username</label>
-    <input type="text" class="form-control" name="username"/>
+    <input class="form-control" type="text" class="form-control" name="username"/>
   </div>
   <div>
     <label>Password</label>
-    <input type="password" class="form-control" name="password"/>
+    <input class="form-control" type="password" class="form-control" name="password"/>
   </div>
   <input type="submit" class="btn btn-primary mt-3"/>
 </form>
