--- a/resources/views/product/showAll.edge
+++ b/resources/views/product/showAll.edge
@@ -2,7 +2,7 @@
 @section('content')
 
 <h1>All Product</h1>
-<table clsss="table">
+<table class="table">
 <tr>
 <th>product id</th>
 <th>flavour</th>
