--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -4,25 +4,32 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>adonis</title>
+    <title>Assignment3 Adonis</title>
+
   </head>
+
+
   <body>
   <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="{{ route('userLogout') }}">Navbar</a>
-</nav>
-    <h1>BASE</h1>
-    <h2>{{auth.user.username}}</h2>
-     <button type="button" class="btn btn-light"><a href="{{ route('home') }}">home</a></button>
-
+  </nav>
+    <h1>Welcome {{auth.user.username}}</h1>
+    <button type="button" class="btn btn-light"><a href="{{ route('home') }}">home</a></button>
 
     <div class=container>
-  @section('content')
-  @endsection
+    @section('content')
+    @endsection
     </div>
+
+
+
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
