--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -16,7 +16,8 @@
   <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="{{ route('userLogout') }}">Navbar</a>
   </nav>
-    <h1>Welcome {{auth.user.username}}</h1>
+    <h1>Welcome admin {{auth.user.username}}</h1>
+    <h1>customer {{auth.customer.username}}</h1>
     <button type="button" class="btn btn-light"><a href="{{ route('home') }}">home</a></button>
 
     <div class=container>
