--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -19,7 +19,7 @@
     <button type="button" class="btn btn-light"><a href="{{ route('flavours.show') }}">Flavours</a></button>
     <button type="button" class="btn btn-light"><a href="{{ route('toppings.show') }}">Toppings</a></button>
     <button type="button" class="btn btn-light"><a href="{{ route('product.show') }}">product</a></button>
-    <button type="button" class="btn btn-light"><a href="{{ route('createCart') }}">create</a></button>
+    <button type="button" class="btn btn-light"><a href="{{ route('cart') }}">create</a></button>
     <button type="button" class="btn btn-light"><a href="{{ route('customers.show') }}">Customers</a></button>
     </div>
 
