--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -17,7 +17,7 @@
   <a class="navbar-brand" href="{{ route('userLogout') }}">Navbar</a>
   </nav>
     <h1>Welcome admin {{auth.user.username}}</h1>
-    <h1>customer {{auth.customer.username}}</h1>
+    <h1>customer {{auth.user.username}}</h1>
     <button type="button" class="btn btn-light"><a href="{{ route('home') }}">home</a></button>
 
     <div class=container>
